# Chess

./: .gitignore  Bishop.cpp  Bishop.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  Doxyfile  Doxyfile.in  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp
app/: main.cpp
cmake/: Documentation.cmake
html/: _bishop_8cpp.html  _chess_board_8cpp.html  _king_8cpp.html  _knight_8cpp.html  _pawn_8cpp.html  _piece_8cpp.html  _player_8cpp.html  _position_8cpp.html  _queen_8cpp.html  _rook_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  files_3.js  files_5.js  searchdata.js
include/: Bishop.h  Bitboard.h  Board.h  ChessBoard.h  ChessBoardBuilder.h  ChessController.h  ChessModel.h  ChessMove.h  ChessMoveTree.h  ChessView.h  Cross.h  GeneralTree.h  King.h  Knight.h  Pawn.h  Piece.h  PieceFactory.h  Player.h  Position.h  Queen.h  Rook.h  ViewListener.h  save_ChessModel.h
latex/: _bishop_8cpp.tex  _chess_board_8cpp.tex  _king_8cpp.tex  _knight_8cpp.tex  _pawn_8cpp.tex  _piece_8cpp.tex  _player_8cpp.tex  _position_8cpp.tex  _queen_8cpp.tex  _rook_8cpp.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
src/: Bishop.cpp  Bitboard.cpp  Board.cpp  ChessBoard.cpp  ChessBoardBuilder.cpp  ChessController.cpp  ChessModel.cpp  ChessMove.cpp  ChessMoveTree.cpp  ChessView.cpp  ChessViewTerminal.cpp  Cross.cpp  GeneralTree.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Player.cpp  Position.cpp  Queen.cpp  Rook.cpp  save_ChessModel.cpp
tests/: CMakeLists.txt  test.cpp
